[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/rpc_example_2/Scene.gd" type="Script" id=1]

[node name="Scene" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="."]
margin_right = 125.0
margin_bottom = 600.0

[node name="Id" type="LineEdit" parent="Left"]
margin_right = 125.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Remote" type="Button" parent="Left"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 48.0
text = "remote"

[node name="Master" type="Button" parent="Left"]
margin_top = 52.0
margin_right = 125.0
margin_bottom = 72.0
text = "master"

[node name="Puppet" type="Button" parent="Left"]
margin_top = 76.0
margin_right = 125.0
margin_bottom = 96.0
text = "puppet"

[node name="IP" type="LineEdit" parent="Left"]
margin_top = 510.0
margin_right = 125.0
margin_bottom = 534.0
size_flags_vertical = 10

[node name="Connect" type="Button" parent="Left"]
margin_top = 538.0
margin_right = 125.0
margin_bottom = 558.0
text = "Connect to server"

[node name="Create" type="Button" parent="Left"]
margin_top = 562.0
margin_right = 125.0
margin_bottom = 582.0
text = "Create a server"

[node name="Status" type="Label" parent="Left"]
margin_top = 586.0
margin_right = 125.0
margin_bottom = 600.0
custom_colors/font_color = Color( 0.894118, 0.0117647, 0.0117647, 1 )

[node name="Right" type="VBoxContainer" parent="."]
margin_left = 576.0
margin_right = 576.0
margin_bottom = 600.0
size_flags_horizontal = 6
size_flags_vertical = 3

[connection signal="pressed" from="Left/Remote" to="." method="_on_Remote_pressed"]
[connection signal="pressed" from="Left/Master" to="." method="_on_Master_pressed"]
[connection signal="pressed" from="Left/Puppet" to="." method="_on_Puppet_pressed"]
[connection signal="pressed" from="Left/Connect" to="." method="_connect_to_server"]
[connection signal="pressed" from="Left/Create" to="." method="_create_a_server"]
